# visionpass-ai

./: .gitignore  README.md  TODO.md  servo_full_test.sh  test_servo.sh
.claude/: CLAUDE.md  settings.json  settings.local.json
app/: CMakeLists.txt  main.cpp
app/src/capture/: V4L2CaptureThread.cpp  V4L2CaptureThread.h
app/src/controller/: SystemController.cpp  SystemController.cpp.bak  SystemController.h  SystemState.h
app/src/database/: UserDatabase.cpp  UserDatabase.h
app/src/face/: FaceDetector.cpp  FaceDetector.h  FaceProcessThread.cpp  FaceProcessThread.h  FaceRecognizer.cpp  FaceRecognizer.h
app/src/hardware/: BeeperControl.cpp  BeeperControl.h  ButtonMonitor.cpp  ButtonMonitor.h  IRSensorMonitor.cpp  IRSensorMonitor.h  RC522User.cpp  RC522User.h  RFIDThread.cpp  RFIDThread.h  ServoControl.cpp  ServoControl.h
app/src/network/: MessageClient.cpp  MessageClient.h
app/src/test/: servo_direct_test.c
app/src/voice/: VoiceThread.cpp  VoiceThread.h
app/ui/: MainWindow.cpp  MainWindow.h  MessageDialog.cpp  MessageDialog.h  NotificationOverlay.cpp  NotificationOverlay.h  PasswordDialog.cpp  PasswordDialog.h  TouchKeyboard.cpp  TouchKeyboard.h  VoiceRecordButton.cpp  VoiceRecordButton.h
config/: arm-linux-gnueabihf.toolchain.cmake
docs/: 00-正点原子阿尔法开发板硬件资源.md  01-项目分析.md  02-复刻指南.md  03-硬件资源购买清单.md  04-基于官方源码的AI Agent开发指南.md  TODO.md  学习指南.md  故障排查手册.md  用户管理操作手册.md  硬件接线图.md  部署手册.md
drivers/: DEPLOY.md
drivers/ir_sensor/: Makefile  ir_sensor.c  ir_sensor_test.c
drivers/rc522/: Makefile  rc522.c  rc522_card_diag.c  rc522_diag.c  rc522_scan.c  rc522_test.c  rc522_write_verify.c  simple_test.c
drivers/servo/: Makefile  servo.c  servo_test.c
tools/: deploy-to-board.sh  start.sh  visionpass-launcher.sh
tools/message_manager/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MessageServer.cpp  MessageServer.h  main.cpp
tools/user_manager/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
