# VisionPass AIй—ЁзҰҒзі»з»ҹ вҖ” дәӨеҸүзј–иҜ‘CMakeй…ҚзҪ®
#
# зј–иҜ‘е‘Ҫд»Өпјҡ
#   cd ~/linux/visionpass/app
#   mkdir build-arm && cd build-arm
#   cmake -DCMAKE_TOOLCHAIN_FILE=~/linux/visionpass/config/arm-linux-gnueabihf.toolchain.cmake ..
#   make -j$(nproc)
#
# дә§зү©пјҡvisionpassпјҲARM ELFеҸҜжү§иЎҢж–Үд»¶пјү
# йғЁзҪІеҲ°ејҖеҸ‘жқҝпјҡcp visionpass /opt/visionpass/bin/

cmake_minimum_required(VERSION 3.10)
project(VisionPass VERSION 1.0 LANGUAGES C CXX)

# C++11ж ҮеҮҶпјҲGCC 4.9.4дёҚе®Ңе…Ёж”ҜжҢҒC++14пјҢжүҖд»Ҙз”ЁC++11пјү
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ==================== и·Ҝеҫ„й…ҚзҪ® ====================

# Qt ARMи·Ҝеҫ„
set(QT_ARM_DIR "/home/viper/linux/tool/sysroot-combined/opt/qt5.12-arm")

# NCNN ARMи·Ҝеҫ„
set(NCNN_ARM_DIR "/home/viper/ncnn/build-arm/install")

# sysrootпјҲеҢ…еҗ«OpenCVиҝҗиЎҢеә“гҖҒCж ҮеҮҶеә“еӨҙж–Үд»¶зӯүпјү
set(SYSROOT_DIR "/home/viper/linux/tool/sysroot-combined")

# ==================== Qtй…ҚзҪ® ====================

set(CMAKE_PREFIX_PATH "${QT_ARM_DIR}")
find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets Network Sql Concurrent)

set(Qt5Core_MOC_EXECUTABLE "${QT_ARM_DIR}/bin/moc")
set(Qt5Core_RCC_EXECUTABLE "${QT_ARM_DIR}/bin/rcc")
set(Qt5Core_UIC_EXECUTABLE "${QT_ARM_DIR}/bin/uic")

# ==================== OpenCVй…ҚзҪ® ====================

set(OpenCV_INCLUDE_DIRS "${SYSROOT_DIR}/usr/include/opencv2")
set(OpenCV_LIB_DIR "${SYSROOT_DIR}/usr/lib")

set(OPENCV_LIBS
    opencv_core
    opencv_imgproc
    opencv_imgcodecs
    opencv_objdetect
    opencv_highgui
    opencv_videoio
)

# ==================== NCNNй…ҚзҪ® ====================

set(NCNN_INCLUDE_DIRS "${NCNN_ARM_DIR}/include/ncnn")
set(NCNN_LIBRARIES "${NCNN_ARM_DIR}/lib/libncnn.a")

# ==================== жәҗж–Үд»¶ ====================

# дәәи„ёжЁЎеқ—пјҲе·Іжңүпјү
set(FACE_SOURCES
    src/face/FaceDetector.cpp
    src/face/FaceRecognizer.cpp
    src/face/FaceProcessThread.cpp
)
set(FACE_HEADERS
    src/face/FaceDetector.h
    src/face/FaceRecognizer.h
    src/face/FaceProcessThread.h
)

# зі»з»ҹжҺ§еҲ¶еҷЁ
set(CONTROLLER_SOURCES
    src/controller/SystemController.cpp
)
set(CONTROLLER_HEADERS
    src/controller/SystemController.h
    src/controller/SystemState.h
)

# и§Ҷйў‘йҮҮйӣҶ
set(CAPTURE_SOURCES
    src/capture/V4L2CaptureThread.cpp
)
set(CAPTURE_HEADERS
    src/capture/V4L2CaptureThread.h
)

# зЎ¬д»¶жЁЎеқ—
set(HARDWARE_SOURCES
    src/hardware/RC522User.cpp
    src/hardware/RFIDThread.cpp
)
set(HARDWARE_HEADERS
    src/hardware/RC522User.h
    src/hardware/RFIDThread.h
)

# UIз»„д»¶
set(UI_SOURCES
    ui/MainWindow.cpp
    ui/NotificationOverlay.cpp
)
set(UI_HEADERS
    ui/MainWindow.h
    ui/NotificationOverlay.h
)

# е…ҘеҸЈзӮ№
set(MAIN_SOURCE
    main.cpp
)

# жүҖжңүжәҗж–Үд»¶жұҮжҖ»
set(ALL_SOURCES
    ${MAIN_SOURCE}
    ${FACE_SOURCES}
    ${CONTROLLER_SOURCES}
    ${CAPTURE_SOURCES}
    ${HARDWARE_SOURCES}
    ${UI_SOURCES}
)

set(ALL_HEADERS
    ${FACE_HEADERS}
    ${CONTROLLER_HEADERS}
    ${CAPTURE_HEADERS}
    ${HARDWARE_HEADERS}
    ${UI_HEADERS}
)

# ==================== жһ„е»әзӣ®ж ҮпјҡеҸҜжү§иЎҢж–Үд»¶ ====================

add_executable(visionpass ${ALL_SOURCES})

# еҢ…еҗ«и·Ҝеҫ„
target_include_directories(visionpass PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/src/face
    ${CMAKE_CURRENT_SOURCE_DIR}/src/controller
    ${CMAKE_CURRENT_SOURCE_DIR}/ui
    ${QT_ARM_DIR}/include
    ${QT_ARM_DIR}/include/QtCore
    ${QT_ARM_DIR}/include/QtGui
    ${QT_ARM_DIR}/include/QtWidgets
    ${QT_ARM_DIR}/include/QtNetwork
    ${QT_ARM_DIR}/include/QtSql
    ${NCNN_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    /usr/local/arm/gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabihf/arm-linux-gnueabihf/include/c++/4.9.4
    /usr/local/arm/gcc-linaro-4.9.4-2017.01-x86_64_arm-linux-gnueabihf/arm-linux-gnueabihf/include/c++/4.9.4/arm-linux-gnueabihf
    ${SYSROOT_DIR}/usr/include
)

# й“ҫжҺҘеә“пјҲеҸӘй“ҫжҺҘж ёеҝғOpenCVжЁЎеқ—пјҢз§»йҷӨдҫқиө–GTK/GStreamerзҡ„highgui/videoioпјү
target_link_libraries(visionpass PRIVATE
    Qt5::Core
    Qt5::Gui
    Qt5::Widgets
    Qt5::Network
    Qt5::Sql
    Qt5::Concurrent
    ${NCNN_LIBRARIES}
    ${OpenCV_LIB_DIR}/libopencv_core.so
    ${OpenCV_LIB_DIR}/libopencv_imgproc.so
    ${OpenCV_LIB_DIR}/libopencv_imgcodecs.so
    ${OpenCV_LIB_DIR}/libopencv_objdetect.so
    ${SYSROOT_DIR}/usr/lib/libz.so
    pthread
    -Wl,--allow-shlib-undefined  # е…Ғи®ёжңӘе®ҡд№үзҡ„е…ұдә«еә“з¬ҰеҸ·пјҲиҝҗиЎҢж—¶з”ұејҖеҸ‘жқҝжҸҗдҫӣпјү
)

# GCC 4.9.4е…је®№ж—§ABIпјҲOpenCVеә“еҸҜиғҪдҪҝз”Ёж–°ABIзј–иҜ‘пјү
target_compile_definitions(visionpass PRIVATE _GLIBCXX_USE_CXX11_ABI=0)

# Qt MOCеӨ„зҗҶ
qt5_wrap_cpp(MOC_FILES
    src/face/FaceDetector.h
    src/face/FaceRecognizer.h
    src/face/FaceProcessThread.h
    src/controller/SystemController.h
    src/capture/V4L2CaptureThread.h
    src/hardware/RFIDThread.h
    ui/MainWindow.h
    ui/NotificationOverlay.h
)
target_sources(visionpass PRIVATE ${MOC_FILES})